# homelog

./: .buildpacks  .gitignore  LICENSE  Procfile  README.md  app.json  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
homelog/: app.py  cli.py  database.py  models.py  notify.py
homelog/templates/: base.html.j2  table.html.j2
tests/: test_app.py
