[tool.poetry]
name = "homelog"
version = "0.1.0"
description = ""
authors = ["Alexandre Bulté <alexandre@bulte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
dataset = "^1.6.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
