[tool.poetry]
name = "homelog"
version = "0.1.0"
description = ""
authors = ["Alexandre Bulté <alexandre@bulte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
dataset = "^1.6.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
minicli = "^0.5.1"
pydantic = "^1.10.8"
httpx = "^0.24.1"
pandas = "^2.0.2"
matplotlib = "^3.7.1"

[tool.poetry.scripts]
homelog = "homelog.cli:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
